# llm-cache-optimizer

./: .gitignore  README.md  README_zh.md  RELEASE_NOTES_v0.3.0.md  SKILL.md  pyproject.toml
.github/workflows/: test.yml
benchmark/: contrast_result.md  contrast_test.py  run_benchmark.py
docs/claude-code/: cache-optimizer.md
docs/codex/: AGENTS.md
docs/opencode/: README.md  opencode.json.example
docs/skills/: llm-cache-optimizer.md
examples/: basic.py  claude_code_example.py  codex_example.py  deepseek_example.py  memory_demo.py  multi_provider_example.py  openai_compatible_example.py  opencode_example.py
llm_cache_optimizer/: __init__.py  __main__.py  client.py  layers.py  mcp_server.py  memory.py  metrics.py  serializer.py
llm_cache_optimizer/adapters/: __init__.py  claude.py  openai.py
tests/: test_claude_adapter.py  test_layers_client.py  test_mcp_server.py  test_memory.py  test_openai_adapter.py  test_serializer.py
