[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-cache-optimizer"
version = "0.3.0"
description = "Agent Cache Runtime for building cache-aware LLM applications."
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "xuzeTop1" },
]
keywords = [
  "llm",
  "prompt-cache",
  "agent",
  "openai",
  "anthropic",
  "deepseek",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/xuzeTop1/llm-cache-optimizer"
Repository = "https://github.com/xuzeTop1/llm-cache-optimizer"
Issues = "https://github.com/xuzeTop1/llm-cache-optimizer/issues"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
mcp = []  # MCP server has no extra dependencies (stdlib only)
all = ["openai>=1.0.0", "anthropic>=0.30.0"]
dev = ["pytest>=7.0", "pytest", "build", "twine"]

[project.scripts]
lco-mcp = "llm_cache_optimizer.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["llm_cache_optimizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
